--- a/css/orlando.css
+++ b/css/orlando.css
@@ -1,7 +1,9 @@
     header{
         width: 100%;
         height: 150px;
-        background:rebeccapurple;
+        background:rgb(94, 41, 154,.8);
+        z-index: 2;
+        position: relative;
     }
 
     header .container {
@@ -108,7 +110,7 @@
   
     
 #menu {
-	margin: 26px 0;
+	margin: 12px 0;
 }
 #menu li {
 	display: inline-block;
@@ -118,6 +120,22 @@
     width: 182px;
 
 }
+
+#menu li.search ::-webkit-input-placeholder{
+    color: #FFF;
+}
+#menu li.search button{
+    background: none;
+    border: none;
+}
+
+#menu li.search button i{
+font-size:20px;
+color: rgba(255, 255, 255  , .5) ;
+position: absolute;
+top: 8px;
+right: 10px;
+}
 #menu li.search input{
     background-color: #5c2d90;
     color: #FFF;
@@ -126,12 +144,34 @@
     line-height: 30px;
     
 }
-#menu li.search ::-webkit-input-placeholder{
-    color: #FFF;
-}
 #menu li a {
 	color: #FFF;
 	font-size: 16px;
 	padding: 10px 25px;
 	font-weight: bold;
+}
+
+#banner{
+    width: 100%;
+    height: 728px;
+    position: relative;
+    background: url("../img/banner.jpg");
+    top: -110px;
+}
+
+#banner h1{
+    top: 300px;
+    color: #FFF;
+    position: relative;
+    font-size: 92px;
+    top:-110;
+    text-shadow: 2px 2px 2px rgb(0, 0, 0,45);
+    right: -100px;
+
+}
+#banner h1 small{
+    font-size: 32px;
+    display:block;
+    color: #FFF;    
+
 }
