--- a/css/orlando.css
+++ b/css/orlando.css
@@ -235,3 +235,47 @@ right: 10px;
     font-family: 'OpenSans';
 
 }
+
+#call-to-action {
+	position: relative;
+    top: 102px;
+    margin-bottom: 50px;
+}
+#call-to-action h2 {
+	color:#5E2799;
+	font-family: 'OpenSans-Light';
+	font-size: 28px;
+    text-transform: uppercase;
+    text-align: center;
+}
+#call-to-action hr {
+	border:#FDE192 solid 5px;
+	width: 200px;
+	margin: 0 auto;     
+}   
+#call-to-action p {
+	margin-top: 60px;
+    margin-bottom: 20px;
+    color: #656565;     
+}
+#call-to-action .btn {
+	min-width: 164px;
+    height: 44px;
+    line-height: 34px;
+    border-radius: 0;
+}
+#call-to-action .btn-roxo {
+    color: #fff;
+    background-color: #5E299A;
+    border-color: #5E299A;
+    margin-left: 400px;
+    display: block;
+}
+#call-to-action .btn-amarelo {
+    color: #000;
+    background-color: #FDE192;
+    border-color: #FDE192;
+    margin-left:10px;
+    display: block;
+
+}
