--- a/css/orlando.css
+++ b/css/orlando.css
@@ -1,13 +1,22 @@
+* {
+    padding:0;
+    margin:0;
+    vertical-align:baseline;
+    list-style:none;
+    border:0
+    }
     body{
-        margin-right: -150px;
-        position: relative;
         width: 100%;
+        margin: 0;
+        border: none;
+        margin-right: 0;
     }
     header{
         width: 100%;
         height: 150px;
         background:rgb(94, 41, 154,.8);
         z-index: 2;
+         margin:0;
         position: relative;
     }
 
@@ -115,7 +124,7 @@
   
     
 #menu {
-	margin: 12px 0;
+	margin: 12px 0 0 0;
 }
 #menu li {
 	display: inline-block;
@@ -158,11 +167,12 @@ right: 10px;
 
 #banner{
     width: 100%;
-	height: 728px;
-	position: relative;
-	background: url("../img/banner.jpg") no-repeat;
-	background-position: 0px -100px;
-	top: -130px;
+    margin:0;
+    height: 728px;
+    position: relative;
+    background: url("../img/banner.jpg")no-repeat;
+    background-position:0px 110px;
+    top: -130px;
 }
 
 #banner h1{
@@ -277,5 +287,34 @@ right: 10px;
     border-color: #FDE192;
     margin-left:10px;
     display: block;
+
+}
+footer {
+	margin-top: 110px;
+}
+footer .row {
+	width: 100%;
+}
+
+footer .row-cinza {
+	height: 200px;
+	background-color: #171F26;
+}
+footer .row-cinza-escuro {
+	height: 60px;
+	background-color: #11171D;
+	border-top: #242D37 1px solid;
+}
+
+ .pull-left{
+    color: #FDE092;
+    width: 500px;
+    height: 60px;
+    padding-left: 30px;
+}
+.text-roxo{
+    text-align: right;
+    color: #5E299A;
+    padding-left: 450px;
 
 }
