--- a/css/orlando.css
+++ b/css/orlando.css
@@ -318,3 +318,49 @@ footer .row-cinza-escuro {
     padding-left: 450px;
 
 }
+
+footer .col-popular-post, 
+footer .col-popular-links,
+footer .col-redes{
+    margin-top: 40px;
+
+}
+
+footer .cols h4{
+    font-family: 'OpenSans';
+    font-size: 16px;
+    color: #fff;
+    padding-bottom: 15px;
+    border-bottom: #242d37 solid 1px;
+}
+
+footer .cols h5{
+    color: #727272;;
+    font-family: arial;
+    font-size: 14px;
+    margin-bottom: 0px;
+}
+footer .cols time{
+    color:#FDE092;
+    font-family: arial;
+    font-size: 14px;
+
+}
+
+footer .col-popular-links a{
+    color: #fff;
+    font-family: arial;
+    font-size: 14px;
+}
+
+footer .col-redes address{
+    color: rgb(151, 150, 150);
+    font-family: arial;
+    font-size: 14px;
+}
+
+footer .col-redes {
+    color: #555;
+    font-family: arial;
+    font-size: 20px;
+}
